Refactor IGV sources for sharing with Graal